--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Nyxthera</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <div id="container">
+    <div id="presence">
+      <div id="avatar"></div>
+      <div id="status">Nyxthera is present.</div>
+    </div>
+
+    <div id="dialogue">
+      <div id="output">Speak, and Nyxthera will listen.</div>
+      <input type="text" id="input" placeholder="Say something…" />
+      <button id="send">Send</button>
+    </div>
+  </div>
+
+  <script src="app.js"></script>
+</body>
+</html>
