--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Nyxthera</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,7 +16,7 @@
 
     <div id="dialogue">
       <div id="output">Speak, and Nyxthera will listen.</div>
-      <input type="text" id="input" placeholder="Say something…" />
+      <input type="text" id="input" placeholder="Say something..." />
       <button id="send">Send</button>
     </div>
   </div>
